added bio index

--- a/01week/bio/index.html
+++ b/01week/bio/index.html
@@ -1,11 +1,93 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Bio </title>
-  </head>
-  <body>
-    <a href="../resume/index.html">Link to Resume</a>
-    <h1>this is my bio page</h1>
-  </body>
+
+<head>
+  <title>Alison Dorantes-Garcia's Bio</title>
+  <meta charset="utf-8">
+  <!-- This is my CSS Reset File -->
+  <!-- <link rel="stylesheet" href="css/css-reset.css"> -->
+
+  <!-- This is my CSS File -->
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+  <main>
+    <header>
+      <img src="https://68.media.tumblr.com/740c5bd6f90170e08d0c14b683bec0c4/tumblr_okb1p7UXdJ1u2pha7o1_r1_500.jpg" alt="Photo of Alison" class="img-circle" />
+      <div class="name">
+        <h1>Alison Dorantes-Garcia</h1>
+        <h3 id="tagline">Human probably. Starfox.</h3>
+      </div>
+    </header>
+
+    <section>
+      <h3>About Me</h3>
+      <p>I came to Austin, Texas from Watsonville, California, in search of adventure, freedom, and all of the other stuff they sing about in the Firefly intro.</p>
+      <p>Most of my direct work experience is in teaching and working with youth; I worked in Oakland Unified School District, Orinda, and
+      Berkeley California schools with students from all ages and backgrounds. Teaching was challenging and interesting, although I dreamed of doing creative work, and started to transition to that through copywriting and editing.</p>
+      <p>I excell in team environments where I can fasciliatate direct communication. I'm blunt, and maybe too serious in spite of my hair color.
+    </section>
+
+    <section>
+      <h3>Why I am Learning how to Code</h3>
+      <p>I have a fierce sense of aesthetic beauty that I've honed on personal artistic projects such as painting and digital illustration.
+      I hope to apply my sense of color, balance, and appreciation of art to front-end engineering projects with an emphasis in user design.</p>
+      <p>Someone needs to make open-source projects beautiful, might as well be me.</p>
+      <p>I also hope to make video games.</p>
+    </section>
+
+    <section>
+      <h3>Favorite TV Shows</h3>
+      <ul id="tv">
+        <li>Jojo's Bizarre Aventure</li>
+        <li> Steven Universe</li>
+        <li>Adventure Time</li>
+      </ul>
+
+    </section>
+
+    <section>
+      <h3>Favorite Albums</h3>
+      <ol>
+        <li>Vespertine
+          <p class="artist">Bjork</p>
+        </li>
+        <li>Treasure
+          <p class="artist">Cocteau Twins</p>
+        </li>
+        <li>Kiroku Series
+            <p class="artist">Number Girl</p>
+          </li>
+          <li>Souvlaki
+            <p class="artist">Slowdive</p>
+          </li>
+      </ol>
+      <!-- <table>
+        <tr>
+            <th>Favorite Albums</th>
+        </tr>
+        <tr>
+          <td>Vespertine"
+            <p class="artist">Bjork</p>
+          </td>
+          <td>"Treasure"
+            <p class="artist">Cocteau Twins</p>
+          </td>
+          <td id="right">"Kiroku Series"
+            <p class="artist">Number Girl</p>
+          </td>
+        </tr> -->
+    </section>
+
+
+  </main>
+
+  <footer>
+
+
+  </footer>
+
+</body>
+
 </html>
